test/bad/generics/type10.px

func f<A>(p: A->A): Void def
    return

func g(x: Int): Bool def
    return true

f(g)
